--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 * { 
     box-sizing: border-box; 
     margin: 0;
@@ -45,8 +43,6 @@ a {
 a:hover { 
     text-decoration: underline;
 }
-
-
 
 #main-wrapper { 
     max-width: 1200px;
@@ -96,7 +92,7 @@ nav li {
 
 .post-meta { 
     font-size: 0.9em;
-    color: #7f8c8d;
+    color: #f7eee0;
     margin-bottom: 10px;
     display: block;
 }
@@ -106,8 +102,6 @@ nav li {
     border-bottom: 1px solid #ddd;
     margin-bottom: 25px;
 }
-
-
 
 figure { 
     max-width: 600px; 
@@ -134,8 +128,6 @@ figure img[alt] {
     color: #7f8c8d;
     padding: 5px 0;
 }
-
-
 
 .recipe-tracker { 
     width: 100%;
@@ -217,7 +209,6 @@ footer {
     border-radius: 5px;
 }
 
-
 .contact-form-layout input[type="text"],
 .contact-form-layout input[type="email"],
 .contact-form-layout textarea,
@@ -236,3 +227,71 @@ footer {
     display: block;
     margin: 20px 0;
 }
+
+/* Breakpoints based on Bootstrap responsive guidelines */
+/* https://getbootstrap.com/docs/5.0/layout/breakpoints/ */
+
+@media screen and (max-width: 616px) {
+  header {
+    background: #f4f7f9;
+    display: block;
+    padding: 0;
+  }
+
+  header ul li {
+    display: block;
+    border-top: 1px solid #1c2c41;
+  }
+
+  header h1 {
+    padding: 20px;
+  }
+
+
+
+  #main-wrapper { 
+    max-width: 100%; 
+    margin: 0;
+    box-shadow: none;
+  }
+
+  img { 
+    width: 100%; 
+    height: auto;
+  }
+    
+  .newsletter-form { 
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  header {
+    background: #F9DC5C;
+    color: #011936;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    background: #3e5d48;
+    color:#eee
+  }
+}
+
+ @media screen and (min-width: 992px) {
+  header {
+    background: #011936;
+    color: #e0caad;
+  } 
+} 
+
+@media screen and (min-width: 1200px) {
+  header {
+    background: #465362;
+    color: #f7f0dc
+  }
+}
+
